--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
     "@stackframe/stack": "^2.8.54",
+    "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.7",
     "framer-motion": "^12.0.3",
     "lucide-react": "^0.474.0",
