--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^3.0.3",
     "chart.js": "^4.4.7",
     "framer-motion": "^12.0.3",
+    "ioredis": "^5.9.3",
     "lucide-react": "^0.474.0",
     "mongodb": "^7.0.0",
     "next": "^16.1.2",
